src/test/resources/private/typechecking/pass/method_invocation/method_params_07.jova
class Testing {
  private int x;
  private Testing t;

  public Testing test3(int x, bool t) {
       return this.t;
    }

  public int test2(int x, Testing t) {
     return 0;
  }

  public int test1(int x) {
       return 0;
    }

  public int test() {
        return test2(test1(0), test3(0, true));
    }
}