src/test/resources/private/typechecking/fail/method_invocation/method_params_07.jova
class Testing2 {
    public int x;
}

class Testing {
  private int x;
  private Testing t;
  private Testing2 t2;

  public Testing test3(int x, bool t) {
       return this.t;
    }

  public int test2(int x, Testing t) {
     return 0;
  }

  public int test1(int x) {
       return 0;
    }

  public int test() {
        return test2(test1(0), test3(t2.x, true), test1(5));
    }

  public int test4() {
        return test2(test1(0), t2, test1(5));
    }
}